[workspace]
resolver = "2"

members = [
    "libcompiler",
    "libmovevm",
    "crates/compiler",
    "crates/gas",
    "crates/natives",
    "crates/resource-viewer",
    "crates/json",
    "crates/vm",
    "crates/types",
    "crates/storage",
    "crates/e2e-move-tests",
    "tools/generate-bcs-go",
    "tools/precompile",
]

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.bench]
debug = true

[profile.dev]
debug = true

# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
opt-level = 3
debug = 0           # for saving disk space during linking
incremental = false
codegen-units = 16

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
license-file = "LICENSE"
homepage = "https://initia.xyz"
repository = "https://github.com/initia-labs/movevm"
rust-version = "1.77.1"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
initia-move-vm = { path = "crates/vm" }
initia-move-types = { path = "crates/types" }
initia-move-storage = { path = "crates/storage" }
initia-move-natives = { path = "crates/natives" }
initia-move-gas = { path = "crates/gas" }
initia-move-compiler = { path = "crates/compiler" }
initia-move-json = { path = "crates/json" }
initia-move-resource-viewer = { path = "crates/resource-viewer" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
ambassador = "0.4.1"
anyhow = "1.0.41"
bcs = "0.1.5"
better_any = "0.1.1"
claims = "0.7"
clru = "^0.6.2"
cbindgen = "0.26.0"
clap = { version = "4.3.9", features = ["derive", "env", "suggestions"] }
codespan-reporting = "0.11.1"
dialoguer = "0.10.2"
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
errno = "0.3.0"
hex = { version = "0.4.3", default-features = false }
itertools = "0.10.3"
libsecp256k1 = { version = "0.7.1" }
log = { version = "0.4.17", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
once_cell = "1.18.0"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0.188", default-features = false, features = [
    "derive",
    "rc",
] }
serde_bytes = "0.11.9"
serde_json = { version = "1.0.94" }
serde-generate = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
sha2 = "0.10.8"
sha3 = "0.10.6"
smallvec = "1.6.1"
smallbitvec = "2.5.1"
tempfile = "3.2.0"
serial_test = "1.0.0"
thiserror = "1.0.34"
tsu = "1.0.1"
bytes = "1.4.0"
parking_lot = "0.12.1"
base64 = "0.21.7"
bigdecimal = ">=0.4.5"
bech32 = "0.11"
triomphe = "0.1.9"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }

# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
# BEGIN MOVE DEPENDENCIES

move-binary-format = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-bytecode-verifier = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-bytecode-utils = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-cli = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-command-line-common = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-compiler = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-coverage = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-docgen = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-model = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-package = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-prover = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-prover-boogie-backend = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-prover-bytecode-pipeline = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-resource-viewer = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-stackless-bytecode = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-stdlib = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-symbol-pool = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-unit-test = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-vm-runtime = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-vm-test-utils = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }
move-vm-types = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "244afa88eafa28185a01a608e3c42d7f9d094ec6" }

# END MOVE DEPENDENCIES

# FOR LOCAL DEVELOPMENNT
# move-binary-format = { path = "../aptos-core/third_party/move/move-binary-format" }
# move-bytecode-verifier = { path = "../aptos-core/third_party/move/move-bytecode-verifier" }
# move-bytecode-utils = { path = "../aptos-core/third_party/move/tools/move-bytecode-utils" }
# move-cli = { path = "../aptos-core/third_party/move/tools/move-cli" }
# move-command-line-common = { path = "../aptos-core/third_party/move/move-command-line-common" }
# move-compiler = { path = "../aptos-core/third_party/move/move-compiler" }
# move-coverage ={ path = "../aptos-core/third_party/move/tools/move-coverage" }
# move-core-types = { path = "../aptos-core/third_party/move/move-core/types" }
# move-docgen = { path = "../aptos-core/third_party/move/move-prover/move-docgen" }
# move-model = { path = "../aptos-core/third_party/move/move-model" }
# move-package = { path = "../aptos-core/third_party/move/tools/move-package" }
# move-prover = { path = "../aptos-core/third_party/move/move-prover" }
# move-prover-boogie-backend = { path = "../aptos-core/third_party/move/move-prover/boogie-backend" }
# move-prover-bytecode-pipeline = { path = "../aptos-core/third_party/move/move-prover/bytecode-pipeline" }
# move-resource-viewer = { path = "../aptos-core/third_party/move/tools/move-resource-viewer" }
# move-stackless-bytecode = { path = "../aptos-core/third_party/move/move-model/bytecode" }
# move-stdlib = { path = "../aptos-core/third_party/move/move-stdlib" }
# move-symbol-pool = { path = "../aptos-core/third_party/move/move-symbol-pool" }
# move-unit-test = { path = "../aptos-core/third_party/move/tools/move-unit-test" }
# move-vm-runtime = { path = "../aptos-core/third_party/move/move-vm/runtime" }
# move-vm-test-utils = { path = "../aptos-core/third_party/move/move-vm/test-utils" }
# move-vm-types = { path = "../aptos-core/third_party/move/move-vm/types" }
