[package]
name = "compiler"
version = "0.1.0"
publish = false
description = "Initia Move Compiler"
homepage = "https://initia.xyz/"
repository = "https://github.com/initia-labs/movevm"
exclude = [".gitignore"]

edition = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "compilerstatic"
path = "src/examples/compilerstatic.rs"
crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
errno = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true, features = [
    "max_level_debug",
    "release_max_level_warn",
] }

initia-move-compiler = { workspace = true }

move-core-types = { workspace = true }
move-cli = { workspace = true }
move-docgen = { workspace = true }
move-package = { workspace = true }
move-model = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
