[package]
name = "compiler"
publish = false

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "compilerstatic"
path = "src/examples/compilerstatic.rs"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
errno = { workspace = true }
thiserror = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }

initia-move-compiler = { workspace = true }
initia-move-types = { workspace = true }

move-core-types = { workspace = true }
move-cli = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
