[package]
name = "initia-move-compiler"

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
dialoguer = { workspace = true }
clap = { workspace = true }
tsu = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
itertools = { workspace = true }
codespan-reporting = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }

initia-move-natives = { workspace = true, features = ["testing"] }
initia-move-gas = { workspace = true, features = ["testing"] }
initia-move-types = { workspace = true }
initia-move-storage = { workspace = true }

move-command-line-common = { workspace = true }
move-cli = { workspace = true }
move-core-types = { workspace = true }
move-coverage ={ workspace = true }
move-package = { workspace = true }
move-unit-test = { workspace = true }
move-vm-runtime = { workspace = true, features = ["testing"] }
move-vm-types = { workspace = true }
move-vm-test-utils = { workspace = true }
move-binary-format = { workspace = true }
move-model = { workspace = true }
legacy-move-compiler = { workspace = true }
move-compiler-v2 = { workspace = true }
move-linter = { workspace = true }
move-docgen = { workspace = true }
move-prover = { workspace = true }
move-prover-boogie-backend = { workspace = true }
move-prover-bytecode-pipeline = { workspace = true }
move-stackless-bytecode = { workspace = true }
move-resource-viewer = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
