[package]
name = "e2e-move-tests"
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/initia-labs/movevm/tree/main/crates/e2e-move-tests"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
bcs = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
sha3 = { workspace = true }
bytes = { workspace = true }
bigdecimal = { workspace = true }
bech32 = { workspace = true }

initia-move-types = { workspace = true }
initia-move-vm = { workspace = true }
initia-move-storage = { workspace = true }
initia-move-gas = { workspace = true }
initia-move-natives = { workspace = true }
initia-move-compiler = { workspace = true }

move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-package = { workspace = true }
move-symbol-pool = { workspace = true }
move-unit-test = { workspace = true }
move-vm-types = { workspace = true }
move-cli = { workspace = true }
move-vm-runtime = { workspace = true }
move-model = { workspace = true }

[features]
default = []
testing = [
    "initia-move-gas/testing",
    "initia-move-natives/testing",
    "initia-move-storage/testing",
    "move-vm-runtime/testing",
]
