[package]
name = "initia-gas"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/initia-labs/initiavm/tree/main/crates/gas"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initia-types = { workspace = true }

bcs = { workspace = true }

move-core-types = { workspace = true }
move-binary-format = { workspace = true }
move-stdlib = { workspace = true }
move-vm-types = { workspace = true }

[features]
default = []
testing = ["move-stdlib/testing"]
