[package]
name = "initia-move-gas"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/initia-labs/movevm/tree/main/crates/gas"
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initia-move-types = { workspace = true }

bcs = { workspace = true }
either = { workspace = true }
rand = { workspace = true }

move-core-types = { workspace = true }
move-binary-format = { workspace = true }
move-stdlib = { workspace = true }
move-vm-types = { workspace = true }

[features]
default = []
testing = ["move-stdlib/testing"]
