[package]
name = "initia-move-gas"

# workspace settings
version.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
initia-move-types = { workspace = true }

bcs = { workspace = true }
either = { workspace = true }
rand = { workspace = true }

move-core-types = { workspace = true }
move-binary-format = { workspace = true }
move-stdlib = { workspace = true }
move-vm-types = { workspace = true }

[features]
default = []
testing = ["move-stdlib/testing"]
